--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -120,7 +120,7 @@ jobs:
         with:
           context: ./api  
           push: true
-          tags: adijaiswal/backend:latest
+          tags: sumit1777/backend:latest
           file: ./api/Dockerfile
 
   build_frontend_docker_image_and_push:
@@ -144,6 +144,6 @@ jobs:
         with:
           context: ./client
           push: true
-          tags: adijaiswal/frontend:latest
+          tags: sumit1777/frontend:latest
           file: ./client/Dockerfile
 
