--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -147,3 +147,65 @@ jobs:
           tags: sumit1777/frontend:latest
           file: ./client/Dockerfile
 
+  trivy_image_scan:
+    runs-on: Agent-2
+    needs: build_frontend_docker_image_and_push   # or whatever job built/pushed your image
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Trivy image scan for backend
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: image               # 👈 scan container image
+          image-ref: sumit1777/backend:latest
+          format: table
+          exit-code: '0'                 
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: CRITICAL,HIGH
+          
+      - name: Run Trivy image scan for frontend
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: image               # 👈 scan container image
+          image-ref: sumit1777/frontend:latest
+          format: table
+          exit-code: '0'              
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: CRITICAL,HIGH
+
+  deploy_to_kubernetes:
+    runs-on: Agent-1
+    needs: trivy_image_scan
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+    - name: Install AWS CLI
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install --update
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: latest
+    - name: Configure kubeconfig
+      run: |
+        mkdir -p $HOME/.kube
+        echo "${{ secrets.EKS_KUBECONFIG }}" | base64 -d > $HOME/.kube/config
+    - name: Deploy to EKS
+      run: |
+        kubectl apply -f k8s-prod/sc.yaml 
+        kubectl apply -f k8s-prod/mysql.yaml 
+        kubectl apply -f k8s-prod/backend.yaml 
+        kubectl apply -f k8s-prod/frontend.yaml 
+        kubectl apply -f k8s-prod/ci.yaml 
+        kubectl apply -f k8s-prod/ingress.yaml 
