--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -158,7 +158,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: image               # 👈 scan container image
-          image-ref: sumit1777/backend:latest
+          image-ref: adijaiswal/backend:latest
           format: table
           exit-code: '0'                 
           ignore-unfixed: true
@@ -169,7 +169,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: image               # 👈 scan container image
-          image-ref: sumit1777/frontend:latest
+          image-ref: adijaiswal/frontend:latest
           format: table
           exit-code: '0'              
           ignore-unfixed: true
